5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1596_1446.log
== TEST (2019-04-02 09:48:00) 
-- CODE:
a1=int(input("Quantos litros polpa de fruta comprados?))
ins.caridade=2/3*a1
michael=1/3*a1
print(michael)
-- ERROR:
File "XXXX", line 1
    a1=int(input("Quantos litros polpa de fruta comprados?))
                                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:48:53) 
-- CODE:
a1=int(input("Quantos litros polpa de fruta comprados?))
ins.caridade=2/3
michael=1/3
print(michael*a1)
-- EXECUTION TIME:
0.204757
-- ERROR:
  File "/home/codebench/codes/1596/1446/main.py", line 1
    a1=int(input("Quantos litros polpa de fruta comprados?))
                                                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:49:48) 
-- CODE:
a1=int(input("Quantos litros de polpa de fruta comprados?))
inscaridade=2/3*a1
michael=1/3*a1
print(michael)
-- EXECUTION TIME:
0.215919
-- ERROR:
  File "/home/codebench/codes/1596/1446/main.py", line 1
    a1=int(input("Quantos litros de polpa de fruta comprados?))
                                                              ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:49:53) 
-- CODE:
a1=int(input("Quantos litros de polpa de fruta comprados?))
inscaridade=2/3*a1
michael=1/3*a1
print(michael)
-- EXECUTION TIME:
0.157133
-- ERROR:
  File "/home/codebench/codes/1596/1446/main.py", line 1
    a1=int(input("Quantos litros de polpa de fruta comprados?))
                                                              ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:53:43) 
-- CODE:
a1=(input("Quantos litros de polpa de fruta comprados?))
inscaridade=2/3*a1
michael=1/3*a1
print(michael)
-- EXECUTION TIME:
0.183251
-- ERROR:
  File "/home/codebench/codes/1596/1446/main.py", line 1
    a1=(input("Quantos litros de polpa de fruta comprados?))
                                                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:58:38) 
-- CODE:
p1=int(input("Quantos litros de polpa?"))
inst.caridade=2/3
michael=1/3
print(p1*michael)
-- EXECUTION TIME:
0.135683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    inst.caridade=2/3
NameError: name 'inst' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:08:10) 
-- CODE:
p1=int(input("Quantos litros de polpa?"))
inst.caridade=2//3
michael=1//3
print(p1*michael)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inst.caridade=2//3
NameError: name 'inst' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:08:54) 
-- CODE:
p1=int(input("Quantos litros de polpa?"))
instcaridade=2//3
michael=1//3
print(p1*michael)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inst.caridade=2//3
NameError: name 'inst' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:10:38) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2/3
michael=1/3
print(p1*michael)
-- EXECUTION TIME:
0.178668
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666666
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:11:12) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2//3
michael=1//3
print(p1*michael)
-- EXECUTION TIME:
0.176695
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
0.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:11:24) 
-- CODE:
p1=int(input("Quantos litros de polpa?"))
instcaridade=2//3
michael=1//3
print(p1*michael)
-- EXECUTION TIME:
0.211564
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:

-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:11:38) 
-- CODE:
p1=int(input("Quantos litros de polpa?"))
instcaridade=2//3
michael=1//3
print(p1*michael)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inst.caridade=2//3
NameError: name 'inst' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:12:03) 
-- CODE:
p1=int(input("Quantos litros de polpa?"))
instcaridade=2//3
michael=1//3
print(p1*michael)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    inst.caridade=2//3
NameError: name 'inst' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:18) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2/3
michael=1/3
print(p1*michael)
-- OUTPUT:
2.333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:16:33) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2/3
michael=1/3
print(p1*michael)
-- EXECUTION TIME:
0.214298
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333333333333333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666666
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:36) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2/3
michael=1/3
print(p1*michael)
-- OUTPUT:
2.333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:17:57) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2/3
michael=1/3
print(round(p1*michael))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:04:11) 
-- CODE:
p1=float(input("Quantos litros de polpa?"))
instcaridade=2/3
michael=1/3
print(round(p1*michael))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:44:48) 
-- CODE:
qtd_litros=float(input())
qts_de_michael=1/3*qtd_litros
a=round(qts_de_michael,3)
print(a)
		
-- EXECUTION TIME:
0.137136
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:44:49) 
-- CODE:
qtd_litros=float(input())
qts_de_michael=1/3*qtd_litros
a=round(qts_de_michael,3)
print(a)
		
-- EXECUTION TIME:
0.154647
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
5.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:

-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:59:13) 
-- CODE:
qtd_litros=float(input())
qts_de_michael=1/3*qtd_litros
a=round(qts_de_michael,  3)
print(a)
		
-- EXECUTION TIME:
0.169227
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
